<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/woodish">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="7dp">
        <TextView
            style="@style/textStyle"
            android:text="@string/enter_breadth"/>
        <EditText
            android:id="@+id/brd"
            android:inputType="numberDecimal"
            style="@style/editStyle"
            android:textStyle="bold"
            android:hint="@string/breadth_in_inches"
            android:autofillHints="" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="7dp">
        <TextView
            style="@style/textStyle"
            android:text="@string/enter_height"/>
        <EditText
            android:id="@+id/hght"
            android:inputType="numberDecimal"
            style="@style/editStyle"
            android:textStyle="bold"
            android:hint="@string/height_in_inches"
            android:autofillHints="" />
    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="7dp">
        <TextView
            style="@style/textStyle"
            android:text="@string/enter_length"
            />
        <EditText
            android:id="@+id/len"
            android:inputType="numberDecimal"
            style="@style/editStyle"
            android:textStyle="bold"
            android:hint="@string/length_in_feet"
            android:autofillHints="" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="7dp">
        <TextView
            style="@style/textStyle"
            android:text="@string/enter_quantity"/>
        <EditText
            android:id="@+id/quan"
            style="@style/editStyle"
            android:textStyle="bold"
            android:hint="@string/quantity_of_wood"
            android:autofillHints="" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="7dp">
        <TextView
            style="@style/textStyle"
            android:text="@string/enter_rate"/>
        <EditText
            android:id="@+id/rate"
            style="@style/editStyle"
            android:textStyle="bold"
            android:hint="@string/rate_of_wood"
            android:autofillHints="" />

    </LinearLayout>

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="horizontal">
    <Button
        android:id="@+id/btCal"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_margin="7dp"
        android:backgroundTint="@color/black"
        android:textColor="@color/white"
        android:text="@string/calculate" />
    <Button
        android:id="@+id/btResetVal"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_margin="7dp"
        android:backgroundTint="@color/black"
        android:textColor="@color/white"
        android:text="@string/clear" />

</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="7dp">
        <TextView
            style="@style/textStyle"
            android:text="@string/kb"/>
        <TextView
            android:id="@+id/kb"
            android:gravity="center"
            android:textAlignment="center"
            style="@style/textStyle" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="7dp">

        <TextView
            style="@style/textStyle"
            android:text="@string/price" />

        <TextView
            android:id="@+id/price"
            style="@style/textStyle"
            android:textAlignment="center"/>

    </LinearLayout>

<!--    <Button-->
<!--        android:id="@+id/btCal"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="60dp"-->
<!--        android:layout_margin="15dp"-->
<!--        android:backgroundTint="@color/black"-->
<!--        android:textColor="@color/white"-->
<!--        android:text="@string/calculate" />-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"> <!-- Set orientation to horizontal -->

        <Button
            android:id="@+id/btAdd"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_margin="7dp"
            android:backgroundTint="@color/black"
            android:textColor="@color/white"
            android:text="@string/Add" />

        <Button
            android:id="@+id/btReset"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_margin="7dp"
            android:backgroundTint="@color/black"
            android:textColor="@color/white"
            android:text="@string/Reset" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="7dp">
        <TextView
            style="@style/textStyle"
            android:text="@string/totalKB"/>
        <TextView
            android:id="@+id/totalKB"
            android:gravity="center"
            style="@style/textStyle"
            android:textAlignment="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="7dp">

        <TextView
            style="@style/textStyle"
            android:text="@string/totalPrice" />

        <TextView
            android:id="@+id/totalPrice"
            style="@style/textStyle"
            android:textAlignment="center"/>

    </LinearLayout>


</LinearLayout>